configure for new aws instance

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - "8000:8000"
     depends_on:
       - db  
+    command: bash -c "sleep(3) && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"  
     environment:
       - DB_NAME=store
       - DB_USER=root
