--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,12 +25,12 @@ services:
 
   web:
     image: ${IMAGE}
-    container_name: django_web
+    container_name: app
     ports:
       - "8000:8000"
     depends_on:
       - db  
-    command: bash -c "sleep(3) && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"  
+    command: bash -c "sleep 3 && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"  
     environment:
       - DB_NAME=store
       - DB_USER=root
