--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,19 +25,41 @@ pipeline {
                 }
             }
         }
-        stage('Deploy to linode') {
+        stage('provision ec2-server') {
+            environment {
+            AWS_ACCESS_KEY_ID = credentials('aws_access_key')
+            AWS_SECRET_ACCESS_KEY = credentials('aws_secret_access_key')
+                }
+            steps {
+                script {
+                    dir('terraform') {                   
+                        sh "terraform init"
+                        sh "terraform apply -auto-approve"
+                        EC2_PUBLIC_IP = sh(
+                            script: "terraform output public_ip" ,
+                            returnStdout : true             
+                        ).trim()   
+                    }
+                }
+            }
+        }        
+        stage('Deploy to aws') {
             steps {
                     environment {
                         DOCKERHUB_CRED = credentials('dockerhub')
                     }
                 script {
-                    echo "deploying the application to linode instance......."
+                    echo "waiting for intialzation process..........."
+                    sleep(time: 90 , unit: "SECONDS")
+
+                    echo "deploying the application to aws instance......."
                     def shellscript="bash ./script.sh ${IMAGE_NAME} ${DOCKERHUB_CRED_USR} ${DOCKERHUB_CRED_PSW}"
-                    def LINODE_INSTANCE="root@172.104.252.70"
-                    sshagent(['linode-server']) {
-                        sh "scp -o StrictHostKeyChecking=no docker-compose.yml ${LINODE_INSTANCE}:/root"
-                        sh "scp -o StrictHostKeyChecking=no script.sh ${LINODE_INSTANCE}:/root"
-                        sh "ssh -o StrictHostKeyChecking=no ${LINODE_INSTANCE} ${shellscript}"
+
+                    def AWS_INSTANCE="ec2-user@${EC2_PUBLIC_IP}"
+                    sshagent(['store-server-key']) {
+                        sh "scp -o StrictHostKeyChecking=no docker-compose.yml ${AWS_INSTANCE}:~/"
+                        sh "scp -o StrictHostKeyChecking=no script.sh ${AWS_INSTANCE}:~/"
+                        sh "ssh -o StrictHostKeyChecking=no ${AWS_INSTANCE} ${shellscript}"
                             }
                 }
             }
