--- a/jenkinsfile
+++ b/jenkinsfile
@@ -45,15 +45,12 @@ pipeline {
         }        
         stage('Deploy to aws') {
             steps {
-                    environment {
-                        DOCKERHUB_CRED = credentials('dockerhub')
-                    }
                 script {
                     echo "waiting for intialzation process..........."
                     sleep(time: 90 , unit: "SECONDS")
 
                     echo "deploying the application to aws instance......."
-                    def shellscript="bash ./script.sh ${IMAGE_NAME} ${DOCKERHUB_CRED_USR} ${DOCKERHUB_CRED_PSW}"
+                    def shellscript="bash ./script.sh ${IMAGE_NAME}"
 
                     def AWS_INSTANCE="ec2-user@${EC2_PUBLIC_IP}"
                     sshagent(['store-server-key']) {
